manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  labels:
    app: speedtest
spec:
  selector:
    app: speedtest
  ports:
    - name: http
      port: 80
      targetPort: http
