manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: speedtest-tunnel
spec:
  parentRefs:
    - name: yh-cluster
      namespace: cloudflare-gateway
  hostnames:
    - speedtest-yh-k8s.tsuru.run
  rules:
    - backendRefs:
        - name: speedtest
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: speedtest
spec:
  parentRefs:
    - name: speedtest-gateway
  hostnames:
    - speedtest.yh.k8s.tsuru.run
  rules:
    - backendRefs:
        - name: speedtest
          port: 80
