manifests/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: speedtest
spec:
  endpointSelector:
    matchLabels:
      app: speedtest
  ingress:
    # Allow intra-namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: speedtest
    # Allow Cilium Gateway proxy
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # Allow cloudflared tunnel pods (Cloudflare Tunnel)
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cloudflare-gateway
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
